Add context-refresh module.