@@ -3,7 +3,7 @@ package com.example.contextrefreshhttp;
 import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 
 import org.junit.jupiter.api.AfterAll;
@@ -12,8 +12,6 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
-import org.springframework.core.io.ClassPathResource;
-import org.springframework.core.io.Resource;
 import org.springframework.http.MediaType;
 import org.springframework.http.RequestEntity;
 
@@ -24,8 +22,6 @@ class ContextRefreshHttpTests {
 
 	@Autowired
 	private TestRestTemplate restTemplate;
-
-	private static final Resource resource = new ClassPathResource("dev.properties");
 
 	@AfterAll
 	static void setUp() throws IOException {
@@ -74,7 +70,7 @@ class ContextRefreshHttpTests {
 	}
 
 	static void editExternalConfigurationProperties(String newFileContent) throws IOException {
-		Files.writeString(Paths.get(resource.getFile().getAbsolutePath()), newFileContent, Charset.defaultCharset(),
+		Files.writeString(Path.of("././dev.properties"), newFileContent, Charset.defaultCharset(),
 				StandardOpenOption.WRITE, StandardOpenOption.TRUNCATE_EXISTING);
 	}
 
